--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 <body>
     <div class="chat-container">
         <div class="chat-header">
-            Chatbot
+            Experiment Chatbot
         </div>
         <div class="chat-body">
             <div class="bot-message">Hello! How can I help you today?</div>
