--- a/plot.html
+++ b/plot.html
@@ -1,5 +1,5 @@
 <head>
-	<script src='https://cdn.plot.ly/plotly-2.27.0.min.js'></script>
+	<script src="https://cdn.plot.ly/plotly-2.27.0.min.js" charset="utf-8"></script>
 	<script src='https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js'></script>
 </head>
 
