--- a/plot.html
+++ b/plot.html
@@ -1,11 +1,15 @@
 <head>
-	<script src="https://cdn.plot.ly/plotly-2.27.0.min.js" charset="utf-8"></script>
+    <script src="https://cdn.plot.ly/plotly-2.27.0.min.js" charset="utf-8"></script>
 	<script src='https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js'></script>
 </head>
 
 <body>
 	<div id='myDiv'><!-- Plotly chart will be drawn inside this DIV --></div>
 </body>
+
+<style>
+    .modebar-container{ display: "none"}
+</style>
 
 <script>
     d3.csv('https://raw.githubusercontent.com/plotly/datasets/master/3d-scatter.csv', function(err, rows){
