--- a/pdf.html
+++ b/pdf.html
@@ -7,11 +7,15 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.6.347/pdf.min.js"></script>
 </head>
 <body>
-    <div style="display: flex; flex-direction: column; padding: 30px;">
+    <div style="display: flex; flex-direction: column; padding: 30px; margin: auto;">
         <div>
-            <input type="file" id="pdfFileInput" accept=".pdf">
-            <button onclick="extractText()">Extract Text</button>
-            <button onclick="arrayToCSV()">Download CSV</button>
+            <button id="proxyButton">Choose File</button>
+            <input type="text" id="selectedFile" style="margin-right: 20px;" readonly placeholder="No file selected">
+            <input id="pdfFileInput" style="display: none;" type="file" accept=".pdf">
+            <button id="btnExtractText" onclick="extractText()">Extract Text</button>
+            <button id="btnDownloadCSV" onclick="arrayToCSV()" disabled>Download CSV</button>
+            <button id="btnUploadToDatabase" onclick="uploadToDatabase()" disabled>Upload to Database</button>
+            <button id="btnGenerateClusterAnalysis" onclick="generateClusterAnalysis()" disabled>Generate Cluster Analysis</button>
         </div>
         <div class="output"></div>
     </div>
@@ -21,6 +25,20 @@
             <p>Embedding data... <span id="embedProgressCount">0</span> out of <span id="embedProgressTotal">0</span> completed. </p>
         </div>
     </div>
+
+    <script>
+        document.getElementById('proxyButton').addEventListener('click', function() {
+            // Trigger the file input when the proxy button is clicked
+            document.getElementById('pdfFileInput').click();
+        });
+
+        // Update the text box when a file is selected
+        document.getElementById('pdfFileInput').addEventListener('change', function() {
+            var selectedFile = document.getElementById('pdfFileInput').files[0];
+            var selectedFileName = selectedFile ? selectedFile.name : 'No file selected';
+            document.getElementById('selectedFile').value = selectedFileName;
+        });
+    </script>
 
     <script>
     // Set the worker source for pdf.js
@@ -38,6 +56,7 @@
         const outputDiv = document.querySelector('.output');
         
         const file = fileInput.files[0];
+        console.log(file);
 
         if (!file) {
             alert('Please select a PDF file.');
@@ -65,6 +84,7 @@
                 const content = await page.getTextContent();
                 let prevFont = 'Times';
                 let prevHeight = '';
+                let sectionCount = 0;
                 content.items.forEach(item => {
                 if ((item.fontName == prevFont || prevFont == 'Times' || item.fontName == 'Times') && item.height == prevHeight) {
                     text += " " + item.str;
@@ -74,9 +94,21 @@
                     prevFont = item.fontName;
                     prevHeight = item.height;
                     const processedText = text.toLowerCase().replace(/ - |- |[^\w\s]+/g, '');
-                    if (processedText.length >= 100) {
-                        textSections.push({ "text": processedText, "page": pageNum, "embedding": []});
+                    const textChunks = processedText.match(/[\s\S]{1,2000}/g) || [];
+                    const minCharacterCount = 300;
+                    if (processedText.length >= minCharacterCount) {
+                        sectionCount++;
                     }
+                    textChunks.forEach((chunk, index) => {
+                        if (chunk.length >= minCharacterCount) {
+                            if (textChunks[index + 1]) {
+                                if (textChunks[index + 1] < minCharacterCount) {
+                                    chunk += textChunks[index + 1];
+                                }
+                            }
+                            textSections.push({ "text": chunk, "source": file.name, "section": sectionCount + "-" + (index + 1), "page": pageNum, "embedding": []});
+                        }
+                    });
                     text = item.str;
                 }
                 });
@@ -84,7 +116,7 @@
 
             // Display the extracted text
             textSections.forEach((item) => {
-                outputDiv.innerHTML += "<h6> page - " + item.page + " </h6><p>" + item.text + "</p";
+                outputDiv.innerHTML += "<h6> page - " + item.page + " | " + " section " + item.section + " </h6><p>" + item.text + "</p";
             });
             EMBEDDING_DATA = textSections;
             openOverlay();
@@ -144,13 +176,16 @@
                 });
 
             })
-            .catch(error => console.log('error', error));
+            .catch(error => {
+                console.log('error', error);
+                closeOverlay();
+            });
     }
     
     const arrayToCSV = (data) => {
         const tempData = EMBEDDING_DATA;
-        const csvContent = "text,page,embedding\n" +
-        tempData.map(item => `${item.text},${item.page},${JSON.stringify(item.embedding)}`).join('\n');
+        const csvContent = "text,source,page,section,embedding\n" +
+        tempData.map(item => `${item.text},${item.source},${item.page},${item.section},${JSON.stringify(item.embedding)}`).join('\n');
 
         const blob = new Blob([csvContent], { type: 'text/csv' });
         const url = URL.createObjectURL(blob);
@@ -164,12 +199,43 @@
         URL.revokeObjectURL(url);
     }
 
-    function openOverlay() {
+    const openOverlay = () => {
         document.getElementById("overlay").style.display = "flex";
     }
-    function closeOverlay() {
+    const closeOverlay = () => {
         document.getElementById("overlay").style.display = "none";
+        document.querySelector("#proxyButton").disabled = true;
+        document.querySelector("#selectedFile").disabled = true;
+        document.querySelector("#btnExtractText").disabled = true;
+        document.querySelector("#btnDownloadCSV").disabled = false;
+        document.querySelector("#btnUploadToDatabase").disabled = false;
+        document.querySelector("#btnGenerateClusterAnalysis").disabled = false;
+        btnDownloadCSV
     }
+
+    const uploadToDatabase = () => {
+        var myHeaders = new Headers();
+        myHeaders.append("Content-Type", "application/json");
+        myHeaders.append('Accept', 'application/json');
+        var raw = JSON.stringify(
+            { "items": [
+                { 
+                    "id": "hello",
+                    "name": "te123st"
+                }
+            ]}
+        );
+        var requestOptions = {
+        method: 'POST',
+        headers: myHeaders,
+        body: raw,
+        redirect: 'follow'
+        };
+        fetch("https://experiment-function-js.azurewebsites.net/api/dbcosmosdelete", requestOptions)
+            .then(response => response.text())
+            .then(result => console.log(result))
+            .catch(error => console.log('error', error));
+        }
     </script>
 
     <style>
@@ -223,6 +289,10 @@
             top: 10px;
             right: 10px;
             cursor: pointer;
+        }
+
+        #pdfFileInput {
+            margin-right: 10px;
         }
     </style>
 </body>
