--- a/pdf.html
+++ b/pdf.html
@@ -276,7 +276,8 @@
         }
 
         const uploadToDatabase = () => {
-            document.querySelector(".overlay-content > p").innetHTML = "Uploading data...";
+            document.querySelector(".overlay-content > p").innerHTML = "Uploading data, please wait...";
+            openOverlay();
             var myHeaders = new Headers();
             myHeaders.append("Content-Type", "application/json");
             myHeaders.append('Accept', 'application/json');
@@ -291,7 +292,12 @@
             };
             fetch("https://experiment-function-js.azurewebsites.net/api/dbcosmosupdate", requestOptions)
                 .then(response => response.text())
-                .then(result => console.log(result))
+                .then(result => {console.log(result)
+                document.querySelector(".overlay-content > p").innerHTML = "Upload complete. Refresh to submit a new document.";
+                    setTimeout(() => {
+                        closeOverlay();
+                    }, 3000); 
+                })
                 .catch(error => console.log('error', error));
         }
 
