--- a/pdf.html
+++ b/pdf.html
@@ -194,7 +194,7 @@
                 "Cluster 4 - Philippine Politics, Government and National Affairs", 
                 "Cluster 5 - Entertainment, Beauty, Travel and Lifestyle Topics", 
                 "Cluster 6 - Legal and Procedural Matters", 
-                "Cluster 7 - Various Information / Topics"
+                "Cluster 7 - Miscellaneous Information / Topics"
             ];
             let text = []
             DIAGRAM_DATA.forEach((cluster, index) => {
