AB#1 AB#5 Update index.html

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             Experiment Chatbot
         </div>
         <div class="chat-body">
-            <div class="bot-message">Hello! How can I help you today?</div>
+            <div class="bot-message">Hello! How can I help you today!?</div>
         </div>
         <div class="input-container">
             <input type="text" class="user-input" placeholder="Type your message...">
